--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,42 @@
-# Node / JavaScript
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-# Build outputs
-dist/
-build/
-client/dist/
-server/dist/
-/.cache/
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-# Angular
-.angular/
-.angular-cache/
-coverage/
-test-results/
-
-# Runtime / temp files
-.env
-.env.*
-.env.local
-.env.production.local
-.DS_Store
-Thumbs.db
-logs/
-*.log
-*.pid
-tmp/
-temp/
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
 # IDEs and editors
-.vscode/
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# OS files
-ehthumbs.db
-Icon
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-# TypeScript
-*.tsbuildinfo
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
 
-# npm pack
-*.tgz
-
-# Certs and keys (if you ever keep them locally)
-/certs/
-*.pem
-
-# PM2
-pm2.pid
-pm2.log
-
-# Docker
-docker-compose.override.yml
-
-# Misc
-/.sass-cache
-/.cache-loader
-coverage/
-nyc_output/
-
-# Ignore local assets that may be large or personal
-public/images/placeholder.png
-
-# Keep a sample env if you want to commit one
-!server/.env.example
-!client/.env.example
-
+# System files
+.DS_Store
+Thumbs.db
